--- a/MvcCoreTutorial/appsettings.json
+++ b/MvcCoreTutorial/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "conn": "data source=.;initial catalog=MvcCoreTutorial;integrated security=true;TrustServerCertificate=True" }
+  //"ConnectionStrings": { "conn": "data source=.;initial catalog=MvcCoreTutorial;integrated security=true;TrustServerCertificate=True" }
 
 }
